--- a/books/cleanphp/demo/composer.json
+++ b/books/cleanphp/demo/composer.json
@@ -11,5 +11,9 @@
         "peridot-php/peridot": "^1.19",
         "peridot-php/peridot-watcher-plugin": "^1.3",
         "peridot-php/peridot-prophecy-plugin": "^1.1"
+    },
+    "require": {
+        "doctrine/orm": "^2.7",
+        "symfony/yaml": "^4.4"
     }
 }
